@startuml Types
skinparam style strictuml
skinparam monochrome true

interface ASTNode {
    getLine(): int
    getColumn(): int
}

class AbstractASTNode {
    AbstractASTNode(int line, int column)
    getLine(): int
    getColumn(): int
    line: int
    column: int
}

interface Type

class AbstractType {

}

class ArrayType {
    type: Type
    length: int
}

class DoubleType {

}

class CharType {

}

class IntType {

}

class VoidType {

}

class StructType {

}

class RecordType {
    type: Type
    name: String
}

class FunctionType {
    returnType: Type
    parameters: List<VariableDefinition>
}

class VariableDefinition {
    type: Type
    name: String
}

ASTNode <|.. AbstractASTNode

AbstractASTNode <|-- AbstractType

Type <|.. AbstractType

AbstractType <|-- ArrayType
AbstractType <|-- DoubleType
AbstractType <|-- CharType
AbstractType <|-- IntType
AbstractType <|-- VoidType
AbstractType <|-- StructType
AbstractType <|-- RecordType
AbstractType <|-- FunctionType

ArrayType o-- "1" Type
RecordType o-- "1" Type
FunctionType o-- "1" Type

StructType o-- "0..n" RecordType
FunctionType o-- "0..n" VariableDefinition
@enduml
